test/files/pos/t1232/J.java
package j;
public class J { public enum E { e1 } }
