test/files/neg/t12159b/J.java
// javaVersion: 17+

package p;

public final class J implements I {
}
